--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <title>Vite + React + TS</title>
     <script src="../node_modules/flyonui/flyonui.js"></script>
   </head>
